# merkato

./: .gitignore  Makefile  README.md  config.json  main.py  pyproject.toml
.github/workflows/: stock_monitor.yml  weekly_report.yml
data/: 2026.csv  stock_data.csv
src/merkato/: it.py  stock_monitor.py  util.py  weekly_report.py
tests/: test_stock_monitor.py  test_util.py  test_weekly_report.py
