[project]
name = "merkato"
version = "0.1.0"
description = "Minimal stock market analysis monitoring bot with email notifications."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.33",
    "pandas>=2.1.4",
    "python-dotenv>=1.0.0",
    "pytest>=9.0.2",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]

[project.scripts]
stock-monitor = "merkato.stock_monitor:main"
weekly-report = "merkato.weekly_report:main"
it = "merkato.it:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/merkato"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
]
